--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,10 @@
 
 <div class="container global">
 		<div class="main-menu">
-				<a href="/a-propos2/">À propos</a>
+				<a href="/">Accueil</a>
+				<a href="/bibliographie/">Bibliographie</a>
 				<a href="/carte/">Carte</a>
+				<a href="/a-propos2/">À propos</a>
 		</div>
 {{ content }}
 </div>
